<resources>
    <string name="app_name">Basketball Score</string>
    <string name="text_team_a">Team name</string>
    <string name="action_3_points">+3 POINTS</string>
    <string name="action_2_points">+2 POINTS</string>
    <string name="action_free_throw">+1 POINT</string>
    <string name="text_team_b">Team name</string>
    <string name="save_match">Save match</string>
    <string name="all_matches">All matches</string>
    <string name="grupo_1">grupo 1</string>
    <string name="_3">+3</string>
    <string name="_2">+2</string>
    <string name="_1">1</string>
    <string name="grupo_2">Grupo 2</string>
    <string name="ver_historial">Ver Historial</string>
    <string name="vs">vs</string>
    <string name="date">date</string>
    <string name="GANADOR">Ganador</string>
    <string name="grupo_11">Grupo 1</string>
</resources>
